2013-10-30  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Give more detailed error message if Linux sources are
	mussing.
	* README.md: Add details on getting Linux sources.

2013-10-29  Anton Kolesov  <anton.kolesov@synopsys.com>

	* README.md: Add example of usage with Opella-XD debug probe.

2013-10-10  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* README.md: Update examples, add examples for uClibc and EM Starter Kit.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Support Git 1.8 which have different output from
	previous versions.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Fix constant nsim_gdb	reboots. It was caused by
	output buffer becoming full and not cleared by expect.

2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-nsim.exp, arc-sim.exp: Update baremetal board
	definitions: disable HW watchpoints, on nSIM reload image each time before
	running.

2013-10-03  Simon Cook  <simon.cook@embecosm.com>

	* windows-installer/buildall.sh: Add top level build all script.
	* windows-installer/EnvVarUpdate.nsh: Add PATH modifying support script.
	* windows-installer/arc_setup_base.nsi: Add installer base script.
	* windows-installer/arc_all.nsi: Add install script.
	* windows-installer/arc_all-openjdk.nsi: Add install script.
	* windows-installer/winbuild: Add NSIS installer script builder.
	* windows-installer/README.md: Add README.

2013-09-30  Anton Kolesov <akolesov@synopsys.com>

	* rel-rpaths.sh: Check that uClibc libc.so file exists before trying to
	update it. Otherwise script fails for elf32-only toolchain build.

2013-09-26  Anton Kolesov <akolesov@synopsys.com>

	* arc-versions.sh: Fix double usage of same variable name for different
	purposes, leading to incorrect behaviour.

2013-09-16  Anton Kolesov <akolesov@synopsys.com>

	* build-all.sh: Add option --[no-]strip to strip host binaries from symbols.